# GAMEpp

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: download-singbox.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_sub.rs
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/monitor/: game_scanner.rs  latency.rs  mod.rs  process.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/proxy/: config.rs
src-tauri/src/subscription/: fetcher.rs  parser.rs
src/stores/: appStore.ts
sub-server/: server.py
