[package]
name = "game-pp"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
sysinfo = "0.31"
serde_yaml = "0.9.34"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
tauri-build = { version = "2", features = [] }
